--- a/propluss/index.html
+++ b/propluss/index.html
@@ -76,7 +76,7 @@
           <div class="logo-box">
             <img src="images/logo.png" alt="">
             <span>
-              Pro plus agent
+              Pro+agent
             </span>
           </div>
           <div>
